infra/kubernetes/base/pharmacy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharmacy-service
  namespace: pharmacy
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: pharmacy-service
  template:
    metadata:
      labels:
        app: pharmacy-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8084"
    spec:
      terminationGracePeriodSeconds: 30
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: pharmacy-service
      containers:
        - name: pharmacy-service
          image: docker.io/munna897/pharmacy-pharmacy-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8084
            initialDelaySeconds: 20
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8084
            initialDelaySeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: pharmacy-service
  namespace: pharmacy
spec:
  selector:
    app: pharmacy-service
  ports:
    - port: 8084
      targetPort: 8084
  type: ClusterIP
